--- a/.github/ISSUE_TEMPLATE/issues.yaml
+++ b/.github/ISSUE_TEMPLATE/issues.yaml
@@ -1,7 +1,8 @@
-name: 🐞 Wrong with workflow or file
-description: File a issue
-title: "Bug, File issue"
-labels: ["Issue", "File/Workflow error"]
+name: 🐞 Bug Report
+description: File an issue for a bug
+title: "Bug Report"
+labels: ["Bug", "File error"]
+
 body:
 - type: checkboxes
   attributes:
@@ -10,34 +11,38 @@ body:
     options:
     - label: I have searched the existing issues
       required: true
+
 - type: textarea
   attributes:
     label: What is the issue?
     description: A concise description of what you're experiencing.
   validations:
-    required: false
+    required: true
+
 - type: textarea
   attributes:
     label: Expected Behavior
     description: A concise description of what you expected to happen.
   validations:
     required: false
+
 - type: textarea
   attributes:
     label: Steps To Reproduce
     description: Steps to reproduce the behavior.
     placeholder: |
       1. In this environment...
-      1. With this config...
-      1. Run '...'
-      1. See error...
+      2. With this configuration...
+      3. Run '...'
+      4. See error...
   validations:
     required: false
+
 - type: textarea
   attributes:
     label: Environment
     description: |
-      examples:
+      Examples:
         - **OS**: Ubuntu 20.04
         - **Node**: 13.14.0
         - **npm**: 7.6.3
@@ -48,6 +53,7 @@ body:
     render: markdown
   validations:
     required: false
+
 - type: textarea
   attributes:
     label: Anything else?
